Fixed horizontal scroll issues and filter styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
-	padding-bottom: 160px;
+	padding-bottom: 60px;
 }
 #footer {
   background-color: #444;
@@ -120,15 +120,15 @@ nav h1 a {
 	width: 25%;
 }
 .filter-options .select-container {
-	width: 40%;
+	width: 30%;
 }
 
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  /*margin: 0 20px;*/
 	width:100%;
 	text-align: center;
 }
@@ -144,7 +144,22 @@ nav h1 a {
   width: 50%;
 }
 
-@media screen and (max-width:575px) {
+@media screen and (max-width:1130px) {
+	.filter-options {
+		text-align: center;
+	}
+	.filter-options .filter-container {
+		width: 100%;
+	}
+	.filter-options .select-container {
+
+		width: 50%;
+	}
+	.filter-options select  {
+		width: 50%;
+	}
+ }
+@media screen and (max-width:690px) {
 	.filter-options .filter-container {
 		width: 100%;
 	}
@@ -166,6 +181,7 @@ nav h1 a {
 #restaurants-list {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr;
+	grid-gap: 15px;
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
@@ -176,7 +192,6 @@ nav h1 a {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
